# chordplay

./: .gitignore  README.md  TODO.md  azure-pipelines.yml  chordplay.cabal  default.nix  flake.nix  shell.nix
.githooks/: pre-push
.github/: copilot-instructions.md
app/: Main.hs
docs/superpowers/plans/: 2026-03-23-chordplay-web.md  2026-03-23-smooth-voice-leading.md  2026-03-24-9th-chord-omission-syntax.md  2026-03-24-ah-vowel-research.md  2026-03-24-formant-shaped-synthesis.md  2026-03-24-roman-numeral-toggle.md  2026-03-24-ux-improvements-plan.md  2026-03-24-voice-gravity-spread.md  2026-03-26-chord-suggestions-key-inference.md  2026-03-30-over-and-13-chords.md  2026-04-07-chordplay-ipad.md  2026-04-24-inversions-and-octave-shift.md
docs/superpowers/specs/: 2026-03-23-smooth-voice-leading-design.md  2026-03-24-9th-chord-omission-syntax-design.md  2026-03-24-ah-vowel-research-design.md  2026-03-24-roman-numeral-toggle-design.md  2026-03-24-ux-improvements-design.md  2026-03-24-voice-gravity-spread-design.md  2026-03-30-over-and-13-chords-design.md  2026-04-07-chordplay-ipad-design.md  2026-04-24-inversions-and-octave-shift-design.md  formant-shaped-synthesis.md
src/ChordPlay/: Audio.hs  MusicTheory.hs  Parser.hs  Playback.hs  Repl.hs
test/: AudioSpec.hs  MusicTheorySpec.hs  ParserSpec.hs  Spec.hs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  types.ts
web/src/components/: ChordInput.tsx  ChordSuggestions.tsx  KeyBadge.tsx  NoteCards.tsx  PlaybackControls.tsx  SyntaxReference.tsx  Toolbar.tsx  TuningComparison.tsx
web/src/engine/: audio.test.ts  (+25 more)
(+8 files in other folders)
