cabal-version:      3.0
name:               chordplay
version:            0.1.0.0
synopsis:           CLI chord player for barbershop harmony
license:            MIT
author:             Seth Speaks
maintainer:         sspeaks610@gmail.com

common defaults
    default-language: GHC2021
    ghc-options:      -Wall -O2
    build-depends:    base >=4.19 && <5

common exe-defaults
    import:           defaults
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"

common test-defaults
    import:           exe-defaults
    build-depends:    hspec >=2.11 && <2.12

library
    import:           defaults
    hs-source-dirs:   src
    exposed-modules:  ChordPlay.MusicTheory
                    , ChordPlay.Parser
                    , ChordPlay.Audio
                    , ChordPlay.Playback
                    , ChordPlay.Repl
    build-depends:    parsec >=3.1 && <3.2
                    , bytestring >=0.12 && <0.13
                    , process >=1.6 && <1.7
                    , directory >=1.3 && <1.4

executable chordplay
    import:           exe-defaults
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    chordplay

test-suite chordplay-test
    import:           test-defaults
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    MusicTheorySpec
                    , ParserSpec
                    , AudioSpec
    build-depends:    chordplay
                    , parsec
                    , bytestring